<sign-up-box-added>

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             </li>
         </ul>
     </nav>
-</header>
-<section>
-    <div>
+</header> 
+<section class="hero">
+    <div class="hero-form">
+       
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
     <!--Add form element-->
@@ -40,9 +41,9 @@
         <label for="name">Enter full name:</label>
         <input type="text" placeholder="Your Name" name="name" id="name" />
         <label for="email">Enter email adress</label>
-        <input type="text" placeholder="Email Address" name="email" id="email" />
+        <input type="email" placeholder="Email Address" name="email" id="email" />
         <label for="phone">Enter a telephone number</label>
-        <input type="text" placeholder="Phone Number" name="phone" id="phone" />
+        <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
         <p>
             Have you worked out with a trainer before?
             <input type="radio" name="trainer-confirm" id="trainer-yes" />
