--- a/index.html
+++ b/index.html
@@ -101,8 +101,39 @@
     </div>
 </section>
 <!-- "Your Trainers" section -->
-<section>
-    <h2>Your Trainers</h2>
+<section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet the Trainers</h2>
+    <article class="trainer">
+        <img src="./assests/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+        <div class="trainer-bio text-left">
+            <h3>Arron Stephens</h3>
+            <h4>Speed / Strength</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus nobis ipsam neque non sint eaque earum similique quia illum aspernatur! Adipisci quaerat aliquid magni! Veritatis reprehenderit obcaecati magnam cum enim.            
+            </p>
+        </div>
+    </article>
+    <!--second trainer bio-->
+    <article class="trainer">
+        <div class="trainer-bio text-right">
+            <h3>Johanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab eligendi, blanditiis sequi libero pariatur culpa, veritatis dolores nihil debitis doloremque, eos amet repudiandae quidem animi nemo mollitia eveniet enim fugiat!
+            </p>
+        </div>
+        <img src="./assests/images/trainer-2.jpg" alt="Johanna Gill cooling off after workout" />
+    </article>
+    <!--third trainer bio-->
+    <article class="trainer">
+        <img src="./assests/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+        <div class="trainer-bio text-left">
+            <h3>Harry "the Headband" Smith</h3>
+            <h4>Stength</h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet vitae, perspiciatis repellat ad quo hic laudantium magnam culpa numquam odit nam voluptatem veniam omnis, inventore velit! Numquam iure ex sapiente.
+            </p>
+        </div>
+    </article>
 </section>
 <!-- "Reach Out"-->
 <section>
