--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3236.209867119593!2d-78.65298858502925!3d35.794780831344156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac5f5c04186c61%3A0x123636e290ba7939!2s1131%20Parkridge%20Ln%2C%20Raleigh%2C%20NC%2027605!5e0!3m2!1sen!2sus!4v1640718538614!5m2!1sen!2sus" width="400" 
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3236.209867119593!2d-78.65298858502925!3d35.794780831344156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac5f5c04186c61%3A0x123636e290ba7939!2s1131%20Parkridge%20Ln%2C%20Raleigh%2C%20NC%2027605!5e0!3m2!1sen!2sus!4v1640718538614!5m2!1sen!2sus" width="400" 
         height="400" 
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy">            
         </iframe>
-    </div>
     <div>
         <h3>Run Buddy</h3>
         <p>
@@ -160,6 +160,7 @@
             P: 555 . Run . Budz (555 123 4567) <br />
             E: <a href="mailto:info@runbuddy.io"> info@runbuddy.io</a>
         </address>
+        </div>
     </div>
 </section>
 <!-- footer -->
