<secondary-style-css>

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!--second trainer bio-->
     <article class="trainer">
         <div class="trainer-bio text-right">
-            <h3>Johanna Gill</h3>
+            <h3>Johanna Gill</h3>p
             <h4>Endurance</h4>
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab eligendi, blanditiis sequi libero pariatur culpa, veritatis dolores nihil debitis doloremque, eos amet repudiandae quidem animi nemo mollitia eveniet enim fugiat!
