--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     <h2 class="section-title secondary-border">What You Do</h2>
     <div>
         <!-- insert this img element-->
-        <img src="./assests/images/step-1/svg" alt="" />
+        <img src="./assests/images/step-1.svg" alt="" />
         <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
         <p> You're already here, so why not?</p>
     </div>
     <div>
         <img src="./assests/images/step-2.svg" alt="" />
-        <h3>Step 2: <span>Consult whith One of Our Trainers.</span></h3>
+        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
         <p>Are you here to build muscle, lose weight, or just feel good?</p>
     </div>
     <div>
